<resources>
    <string name="app_name">Help Desk</string>
    <string name="app_names">#HelpDesk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="assignTask">Assign Task</string>
    <string name="subject">Subject:</string>
    <string name="project">Projects :</string>
    <string name="taskType">Task Type:</string>
    <string name="severity">Severity:</string>
    <string name="notes">Notes:</string>
    <string name="employee">Employee:</string>
    <string name="body">Body:</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="emailId">Email Id</string>
    <string name="companyName">Company Name</string>
    <string name="profile">Profile</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="taskName">Task Name:</string>
    <string name="allottedBy">Allotted By:</string>
    <string name="allottedTo">Allotted To:</string>
    <string name="correctDate">Crct Date:</string>
    <string name="assignedDate">Assigned Date:</string>
    <string name="allottedHours">Allotted Hours:</string>
    <string name="workingHours">Working Hours:</string>
    <string name="estCompletedDate">Est-Comp-Date:</string>
    <string name="critical">Critical</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="open">Open</string>
    <string name="progressing">Progressing</string>
    <string name="closed">Closed</string>
    <string name="timeSheetDetails">TimeSheet Details</string>
    <string name="module">Module:</string>
    <string name="screenName">Task/ Screen Name:</string>
    <string name="taskGroup">Task Category/ Group:</string>
    <string name="task">Task:</string>
    <string name="hoursAllotted">Hours Alloted:</string>
    <string name="tools">Tools:</string>
    <string name="hoursSpent">Hours Spent:</string>
    <string name="workDate">Work Date:</string>
    <string name="taskStatus">Task Status:</string>
    <string name="status">Status:</string>
    <string name="timeSheet">TimeSheet:</string>
    <string name="allotedDate">Allotted Date:</string>
    <string name="documentCount">Documents Count:</string>
    <string name="billable">Billable:</string>
    <string name="yes">Yes</string>
    <string name="detailsComment">Details Comments:</string>
    <string name="kbNotes">KB Notes:</string>
    <string name="uploadAttachments">Upload Attachments:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="chooseFile">Choose File</string>
    <string name="noTask">No Task Allotted..!</string>
    <string name="empNoTask">Employees Have No Task</string>
    <string name="empHourTask">Employees Have Less Hour Task</string>
    <string name="empHaveTask">Employees Have Task</string>
    <string name="logOut">Log Out</string>
    <string name="view">View</string>
    <string name="noTicket">No Tickets Found..!</string>
    <string name="welcomeContent">Hello,</string>
    <string name="welcomeContent1">Welcome to  helpdesk</string>
    <string name="taskDate">Task Date :</string>
    <string name="taskDetails">Task Details :</string>
    <string name="projects">Project:</string>
    <string name="typeMessage">Type a message...</string>
    <string name="feedBack">Feed Back</string>
    <string name="comments">Comments</string>
    <string name="createQuickProject">Create Project</string>
    <string name="addProject">Add Project</string>
    <string name="projectName">Project Name:</string>
    <string name="totalHours">Total Hours estimated:</string>
    <string name="assignResources">Assign Resources</string>
    <string name="noResources">No Resources Allotted..!</string>
    <string name="next">Next</string>
    <string name="remove">Remove</string>
    <string name="department">Department :</string>
    <string name="date">Date</string>
    <string name="designation">Designation :</string>
    <string name="availableProgrammers">Available Programmers</string>
    <string name="addEmployee">Add Employee</string>
    <string name="createModule">Module</string>
    <string name="startDate">Start Date :</string>
    <string name="endDate">End Date :</string>
    <string name="estimatedHours">Estimated Hours</string>
    <string name="noModule">No Modules Created..!</string>
    <string name="addModules">Add Module</string>
    <string name="moduleName">Module Name</string>
    <string name="isActive">isActive</string>
    <string name="deliveryDate">Delivery Date :</string>
    <string name="estimateHour">Estimated Hours :</string>
    <string name="sequenceNo">Sequence No :</string>
    <string name="noSubModule">No Sub Modules Created..!</string>
    <string name="subModule">Sub Module</string>
    <string name="screenTaskName">Screen/Task Name:</string>
    <string name="taskCategoryWorkFlow">Task Category/Work Flow:</string>
    <string name="addSubModules">Add SubModule</string>
    <string name="ticketNumber">Ticket No:</string>
    <string name="phase">Phase:</string>
    <string name="finalDate">Final Date:</string>
    <string name="workHours">Work Hours:</string>
    <string name="issueType">Issue Type:</string>
    <string name="hoursEstimated">Estimated Hours:</string>
    <string name="priority">Priority:</string>
    <string name="isBillable">Is Billable</string>
    <string name="estimateAllot">Estimate and Allot</string>
    <string name="noTaskAllotted">No Task Allotted..!</string>
    <string name="add">Add</string>
    <string name="actualHours">Actual Hours:</string>
    <string name="search">Search</string>
    <string name="assignedBy">Assigned By:</string>
    <string name="assignedTo">Assigned To:</string>
    <string name="hours">Hours:</string>
    <string name="modules">Module:</string>
    <string name="webPageName">WebPage/Screen Name:</string>
    <string name="board">Board :</string>
    <string name="scrum">Scrum:</string>
    <string name="estStartDate">Estd Start Date:</string>
    <string name="estEndDate">Estd End Date:</string>
    <string name="duplicate">Duplicate</string>
    <string name="pushToTaskAllotment">Push To Task Allotment</string>
    <string name="addBackLog">Add BackLog</string>
    <string name="backLog">Back Log</string>
    <string name="sprintName">Sprint Name :</string>
    <string name="noData">No Data..!</string>
    <string name="burnChart">BurnOutChart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empNotUpdated">Employees Not Updated TimeSheet</string>
    <string name="empUpdated">Employees Updated TimeSheet</string>
    <string name="close">Close</string>
    <string name="select_item">Select Item</string>
    <string name="task_allotment">Task Allotment</string>
    <string name="time_sheet">Time Sheet</string>
    <string name="allotted_hours">Allotted Hours:</string>
    <string name="task_alloted">Task Alloted</string>
    <string name="no_task_allotted">No Task Allotted</string>
    <string name="no_timesheet_allotted">No TimeSheet Allotted..!</string>
    <string name="task_timesheet">Task Timesheet</string>
    <string name="task_category">Task Category:</string>
    <string name="please_wait">Please wait ...</string>


    <!--    clientLogin Credentials-->
    <!--    CN:UsAwardsSupply-->
    <!--    EI:kamali@desss.com-->
    <!--    PWD:123456-->
</resources>